--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,35 +1,39 @@
-# docker-compose.ymlservices:
+# docker-compose.dev.yml
 version: "3.8"
 
 services:
+  # ▼ Next.js コンテナ（開発用）
   nextjs:
     build: .
     ports:
       - "3000:3000"
     env_file:
-      - .env.production
-    # environment:
-    #   NEXTAUTH_URL: ${NEXTAUTH_URL}
-    #   NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      - .env.development
     depends_on:
       hasura:
         condition: service_healthy
       libretranslate:
         condition: service_started
+    # 開発時にホットリロード等を使いたい場合、volumes や command を追加してもOK
 
+  # ▼ Hasura コンテナ（ローカルSupabaseに接続）
   hasura:
     image: hasura/graphql-engine:v2.46.0
     platform: linux/arm64
     ports:
       - "8081:8081"
     env_file:
-      - .env.production
+      - .env.development
     environment:
+      # 開発環境では Docker 内コンテナ名 "supabase" & ポート "5432" で接続
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgres@supabase:5432/sppa
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
       HASURA_GRAPHQL_ADMIN_SECRET: ${NEXT_PUBLIC_HASURA_GRAPHQL_ADMIN_SECRET}
-      HASURA_GRAPHQL_JWT_SECRET: '{"type": "HS256", "key": "thisisaverysecurejwtsecretkeythatworks"}'
+      HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS256","key":"wbmvACz5zBHLgMFowQDj4OaTtNAt9EplKs1fyQi6qgPIP4eFoX31+OBWKfUAXYGBmcDCYyMDfQ7Zi5rjj4TOdw=="}'
       HASURA_GRAPHQL_SERVER_PORT: "8081"
+      HASURA_GRAPHQL_SERVER_HOST: "0.0.0.0"
+      HASURA_GRAPHQL_ENABLED_APIS: "metadata,graphql,pgdump,config"
+      HASURA_GRAPHQL_CORS_DOMAIN: "*"
     depends_on:
       supabase:
         condition: service_healthy
@@ -43,13 +47,14 @@ services:
       sh -c "until nc -z supabase 5432; do echo 'Waiting for Supabase...'; sleep 2; done;
       graphql-engine serve"
 
+  # ▼ ローカル開発用 Supabase (PostgreSQL + PostGIS)
   supabase:
     image: imresamu/postgis-arm64:16-3.4
     platform: linux/arm64
     ports:
       - "54330:5432"
     env_file:
-      - .env.production
+      - .env.development
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: sppa
@@ -60,13 +65,14 @@ services:
       retries: 5
       start_period: 15s
 
+  # ▼ LibreTranslate（翻訳API）
   libretranslate:
     image: libretranslate/libretranslate:latest
     platform: linux/arm64
     ports:
       - "8000:5000"
     env_file:
-      - .env.production
+      - .env.development
     environment:
       LT_DEBUG: "true"
       LT_PORT: "5000"
