--- a/config/docker-compose.prod.yml
+++ b/config/docker-compose.prod.yml
@@ -20,7 +20,7 @@ services:
     ports:
       - "8081:8081"
     env_file:
-      - .env.production
+      - ../.env.production
     environment:
       # Supabase Cloudの接続URLは.env.productionで指定
       HASURA_GRAPHQL_DATABASE_URL: ${HASURA_GRAPHQL_DATABASE_URL}
@@ -48,7 +48,7 @@ services:
     ports:
       - "8000:5000"
     env_file:
-      - .env.production
+      - ../.env.production
     environment:
       LT_DEBUG: "true"
       LT_PORT: "5000"
