--- a/config/docker-compose.dev.yml
+++ b/config/docker-compose.dev.yml
@@ -2,7 +2,8 @@
 services:
   # ▼ Next.js コンテナ（開発用）
   nextjs:
-    build: .
+    build:
+      context: ../
     ports:
       - "3000:3000"
     env_file:
