--- a/config/docker-compose.dev.yml
+++ b/config/docker-compose.dev.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - "8081:8081"
     env_file:
-      - .env.development
+      - ../.env.development
     environment:
       # Docker内の接続先は.env.developmentで指定された値を利用
       HASURA_GRAPHQL_DATABASE_URL: ${HASURA_GRAPHQL_DATABASE_URL}
