--- a/config/docker-compose.dev.yml
+++ b/config/docker-compose.dev.yml
@@ -70,7 +70,7 @@ services:
     ports:
       - "8000:5000"
     env_file:
-      - /Users/tanitomohiro/github/sppa/.env.development
+      - ../.env.development
     environment:
       LT_DEBUG: "true"
       LT_PORT: "5000"
