--- a/config/docker-compose.dev.yml
+++ b/config/docker-compose.dev.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - "8081:8081"
     env_file:
-      - /Users/tanitomohiro/github/sppa/.env.development
+      - ../.env.development
     environment:
       HASURA_GRAPHQL_DATABASE_URL: ${HASURA_GRAPHQL_DATABASE_URL}
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
@@ -52,7 +52,7 @@ services:
     ports:
       - "54330:5432"
     env_file:
-      - /Users/tanitomohiro/github/sppa/.env.development
+      - ../.env.development
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: sppa
@@ -70,7 +70,7 @@ services:
     ports:
       - "8000:5000"
     env_file:
-      - /Users/tanitomohiro/github/sppa/.env.development
+      - ../.env.development
     environment:
       LT_DEBUG: "true"
       LT_PORT: "5000"
