--- a/config/docker-compose.dev.yml
+++ b/config/docker-compose.dev.yml
@@ -29,7 +29,7 @@ services:
       HASURA_GRAPHQL_DATABASE_URL: ${HASURA_GRAPHQL_DATABASE_URL}
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
       HASURA_GRAPHQL_ADMIN_SECRET: ${HASURA_ADMIN_SECRET}
-      HASURA_GRAPHQL_JWT_SECRET: ${HASURA_GRAPHQL_JWT_SECRET}
+      HASURA_GRAPHQL_JWT_SECRET_FILE: ${HASURA_GRAPHQL_JWT_SECRET_FILE}
       HASURA_GRAPHQL_SERVER_PORT: "8081"
       HASURA_GRAPHQL_SERVER_HOST: "0.0.0.0"
       HASURA_GRAPHQL_ENABLED_APIS: "metadata,graphql,pgdump,config"
@@ -46,6 +46,8 @@ services:
     entrypoint: >
       sh -c "until nc -z supabase 5432; do echo 'Waiting for Supabase...'; sleep 2; done;
       graphql-engine serve"
+    volumes:
+      - /Users/tanitomohiro/github/sppa/jwt-secret.json:/jwt-secret.json:ro
 
   # ▼ ローカル開発用 Supabase (PostgreSQL + PostGIS)
   supabase:
