--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "typescript": "^5.8.2",
     "utf-8-validate": "^6.0.5",
     "uuid": "^10.0.0",
-    "ws": "^8.18.0",
+    "ws": "link:@apollo/client/ws",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
