--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.4",
     "@tanstack/react-query": "^5.66.11",
+    "@tanstack/react-virtual": "^3.13.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.14",
@@ -86,6 +87,7 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-toastify": "^10.0.6",
     "react-window": "^1.8.11",
     "rxjs": "^7.8.2",
