--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
     "node-fetch": "^3.3.2",
     "ol": "^10.4.0",
     "pg": "^8.11.3",
-    "postcss": "^8.4.20",
     "rbush": "^3.0.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
@@ -88,6 +87,7 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-masonry-css": "^1.0.16",
     "react-toastify": "^10.0.6",
     "react-window": "^1.8.11",
     "rxjs": "^7.8.2",
@@ -109,6 +109,8 @@
     "@types/react-window": "^1.8.8",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.0",
+    "postcss": "^8.5.3",
+    "postcss-preset-env": "^10.1.5",
     "wscat": "^6.0.1"
   }
 }
