--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@types/react-window": "^1.8.8",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.0",
+    "cssnano": "^7.0.6",
     "postcss": "^8.5.3",
     "postcss-preset-env": "^10.1.5",
     "wscat": "^6.0.1"
