--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next-auth/supabase-adapter": "^0.2.1",
     "@prisma/client": "^6.4.1",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -40,6 +44,7 @@
     "caseless": "^0.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "cors": "^2.8.5",
     "d3-array": "^3.2.4",
     "d3-color": "^3.1.0",
