--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -67,6 +67,12 @@ services:
       - HASURA_GRAPHQL_SUBSCRIPTION_MODE=websocket
       - HASURA_GRAPHQL_WEBSOCKET_COMPRESSION=true
       - HASURA_GRAPHQL_WEBSOCKET_CONNECTION_INIT_TIMEOUT=30
+      # CORS設定（WebSocket互換）
+      - HASURA_GRAPHQL_DISABLE_CORS=true
+      # サブスクリプションの追加設定
+      - HASURA_GRAPHQL_LIVE_QUERIES_MULTIPLEXED=true
+      - HASURA_GRAPHQL_LIVE_QUERIES_MULTIPLEXED_BATCH_SIZE=100
+      - HASURA_GRAPHQL_LIVE_QUERIES_MULTIPLEXED_REFRESH_INTERVAL=1000
 
   # ▼ ローカル開発用 Supabase (PostgreSQL + PostGIS)
   supabase:
