--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -36,7 +36,7 @@ services:
       - HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey
       - HASURA_GRAPHQL_JWT_SECRET={"type":"HS256","key":"wbmvACz5zBHLgMFowQDj4OaTtNAt9EplKs1fyQi6qgPIP4eFoX31+OBWKfUAXYGBmcDCYyMDfQ7Zi5rjj4TOdw=="}
       - HASURA_GRAPHQL_UNAUTHORIZED_ROLE=anonymous
-      - HASURA_GRAPHQL_CORS_DOMAIN=*
+      - HASURA_GRAPHQL_DISABLE_CORS=true
       - HASURA_GRAPHQL_WS_READ_COOKIE=true
       - HASURA_GRAPHQL_WEBSOCKET_CONNECTION_INIT_TIMEOUT=30
       - HASURA_GRAPHQL_ENABLE_ALLOWLIST=false
